# video-descriptor

./: .gitignore  README.md  pyproject.toml  requirements-colab.txt
notebooks/: video_descriptor_colab.ipynb
src/video_descriptor/: __init__.py  cli.py  formats.py  transcriber.py
tests/: test_formats.py  test_transcriber.py
